# docs/swagger.yaml
@@ -79,7 +79,6 @@ definitions:
         minLength: 1
         type: string
       parent_id:
-        minimum: 0
         type: integer
     required:
     - name
@@ -87,7 +86,6 @@ definitions:
   dto.CreateOnePostRequest:
     properties:
       category_id:
-        minimum: 0
         type: integer
       content_markdown:
         type: string
@@ -199,7 +197,6 @@ definitions:
         minLength: 1
         type: string
       parent_id:
-        minimum: 0
         type: integer
     required:
     - id
@@ -208,7 +205,6 @@ definitions:
   dto.UpdateOnePostRequest:
     properties:
       category_id:
-        minimum: 0
         type: integer
       content_markdown:
         type: string
@@ -847,10 +843,12 @@ paths:
       - description: 页码
         in: query
         name: page
+        required: true
         type: integer
-      - description: 每页显示数量
+      - description: 每页条数
         in: query
-        name: pageSize
+        name: page_size
+        required: true
         type: integer
       produces:
       - application/json
